--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,15 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -19,16 +12,14 @@
       </div>
       <div>
         <form class="form-inline" action="/login" method="POST">
-          <div class="form-group mb-2">
-            <input
-              class="form-control"
-              type="text"
-              name="username"
-              placeholder="Username"
-              style="width: 300px; margin: 1em"
-            />
-            <button type="submit" class="btn btn-outline-dark">Submit</button>
-          </div>
+          <% if (username) { %>
+            <p>Logged in as: <%= username %>!</p>
+            <button type="submit" class="btn btn-outline-dark">Logout</button>
+            <% } else { %>
+              <input class="form-control" type="text" name="username" placeholder="Username"
+                style="width: 300px; margin: 1em" />
+              <button type="submit" class="btn btn-outline-dark">Submit</button>
+          <% } %>
         </form>
       </div>
     </div>
