--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,16 +11,18 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <div>
-        <form class="form-inline" action="/login" method="POST">
-          <% if (username) { %>
-            <p>Logged in as: <%= username %>!</p>
-            <button type="submit" class="btn btn-outline-dark">Logout</button>
-            <% } else { %>
+        <% if (username) { %>
+          <form class="form-inline" action="/logout" method="POST">
+          <p>Logged in as: <%= username %>!</p>
+          <button type="submit" class="btn btn-outline-dark">Logout</button>
+        </form>
+          <% } else { %>
+            <form class="form-inline" action="/login" method="POST">
               <input class="form-control" type="text" name="username" placeholder="Username"
                 style="width: 300px; margin: 1em" />
               <button type="submit" class="btn btn-outline-dark">Submit</button>
+            </form>
           <% } %>
-        </form>
       </div>
     </div>
   </nav>
