--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,7 +19,7 @@
           <% } else { %>
             <form class="form-inline" action="/login" method="POST">
               <input class="form-control" type="text" name="username" placeholder="Username"
-                style="width: 300px; margin: 1em" />
+                style="width: 300px; margin: 1em" autocomplete="off"/>
               <button type="submit" class="btn btn-outline-dark">Submit</button>
             </form>
           <% } %>
