Add route for /register and refactored to store userId as the cookie, pass user object to the templates, and updated _header.js to show email

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,15 +11,14 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <div>
-        <% if (username) { %>
+        <% if (user && user.email) { %>
           <form class="form-inline" action="/logout" method="POST">
-          <p>Logged in as: <%= username %>!</p>
+          <p>Logged in as: <%= user.email %>!</p>
           <button type="submit" class="btn btn-outline-dark">Logout</button>
         </form>
           <% } else { %>
             <form class="form-inline" action="/login" method="POST">
-              <input class="form-control" type="text" name="username" placeholder="Username"
-                style="width: 300px; margin: 1em" autocomplete="off"/>
+              <input name="email" type="email" class="form-control" placeholder="Email" style="width: 300px; margin: 1em" autocomplete="off">
               <button type="submit" class="btn btn-outline-dark">Submit</button>
             </form>
           <% } %>
