--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,21 +9,30 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
 
-  <title>New URL - TinyApp</title>
+  <title>Login - TinyApp</title>
 </head>
 
 <body>
   <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Create TinyURL</h3>
-      <form class="form-inline" action="/urls" method="POST">
-        <div class="form-group mb-2">
-          <label for="longURL">Enter a URL:</label>
-          <input class="form-control" type="text" name="longURL" placeholder="http://"
-            style="width: 300px; margin: 1em" />
-          <button type="submit" class="btn btn-primary">Submit</button>
+      <h3>Login</h3>
+      <form action="/login" method="POST">
+        <div class="mb-3 row">
+          <label for="email" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input name="email" type="email" class="form-control" placeholder="Email" style="width: 300px; margin: 1em"
+              autocomplete="off">
+          </div>
         </div>
+        <div class="mb-3 row">
+          <label for="password" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input name="password" type="password" class="form-control" style="width: 300px; margin: 1em"
+              autocomplete="off">
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </main>
 
