--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,14 +22,14 @@
           <label for="email" class="col-sm-2 col-form-label">Email</label>
           <div class="col-sm-10">
             <input name="email" type="email" class="form-control" placeholder="Email" style="width: 300px; margin: 1em"
-              autocomplete="off">
+              autocomplete="off" required="true">
           </div>
         </div>
         <div class="mb-3 row">
           <label for="password" class="col-sm-2 col-form-label">Password</label>
           <div class="col-sm-10">
             <input name="password" type="password" class="form-control" style="width: 300px; margin: 1em"
-              autocomplete="off">
+              autocomplete="off" required="true">
           </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
