--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -21,7 +21,7 @@
         <div class="form-group mb-2">
           <label for="longURL">Enter a URL:</label>
           <input class="form-control" type="text" name="longURL" placeholder="http://"
-            style="width: 300px; margin: 1em" />
+            style="width: 300px; margin: 1em" required="false"/>
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
