--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -36,7 +36,7 @@
             <div class="form-group mb-3">
               <label for="longURL">New URL:</label>
               <input class="form-control" type="text" name="longURL" value="<%= longURL %>"
-                style="width: 300px; margin: 1em" />
+                style="width: 300px; margin: 1em" required="false"/>
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </form>
