Changed endpoint from POST /urls/:id/update to POST /urls/:id after reviewing the checklist

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -32,7 +32,7 @@
       <div>
         <h3 class="card-title">Edit</h3>
         <div class="new-url">
-          <form class="form-inline" action="/urls/<%= id %>/update" method="POST">
+          <form class="form-inline" action="/urls/<%= id %>" method="POST">
             <div class="form-group mb-3">
               <label for="longURL">New URL:</label>
               <input class="form-control" type="text" name="longURL" value="<%= longURL %>"
